gccida/c0/gen_split_1230
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_split_1230/src/insn-emit.c:17153:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v1; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_split_1230/src/insn-emit.c:17159:24: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v1 = swap_condition( ( rtx_code)( unsigned __int16)*( _DWORD *)operands[1]); 
                       ^~~~~~~~
                       rtx_cost
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_split_1230/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_split_1230/src/insn-emit.c:17159:35: error: expected expression
v1 = swap_condition( ( rtx_code)( unsigned __int16)*( _DWORD *)operands[1]); 
                                  ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_split_1230/src/obj/insn-emit.o] Error 1
